--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "files.associations": {
         "iostream": "cpp",
         "ostream": "cpp",
-        "string": "cpp"
+        "string": "cpp",
+        "random": "c"
     },
     "C_Cpp.errorSquiggles": "Enabled",
     "cmake.configureOnOpen": true
