--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
         "iostream": "cpp",
         "ostream": "cpp",
         "string": "cpp",
-        "random": "c"
+        "random": "c",
+        "array": "cpp"
     },
     "C_Cpp.errorSquiggles": "Enabled",
     "cmake.configureOnOpen": true
